aux: updated openapi schema from BE
