# openapi/openapi.json
@@ -80,6 +80,44 @@
         }
       }
     },
+    "/registrations/confirm/{paymentId}": {
+      "post": {
+        "tags": ["registration"],
+        "operationId": "confirmPayment",
+        "parameters": [
+          {
+            "name": "paymentId",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int64" }
+          },
+          {
+            "name": "deposit",
+            "in": "query",
+            "required": true,
+            "schema": { "type": "boolean" }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/GenericError" }
+              }
+            }
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/Registration" }
+              }
+            }
+          }
+        }
+      }
+    },
     "/public/registration/{eventTermId}": {
       "post": {
         "tags": ["public"],
@@ -631,10 +669,11 @@
           "discountPercent": { "type": "number" },
           "depositPaid": { "type": "boolean" },
           "paid": { "type": "boolean" },
-          "final_price": { "type": "number" },
-          "hasDeposit": { "type": "boolean" },
+          "variableSymbol": { "type": "string" },
+          "remainingValue": { "type": "number" },
           "hasDiscount": { "type": "boolean" },
-          "remainingValue": { "type": "number" }
+          "hasDeposit": { "type": "boolean" },
+          "finalPrice": { "type": "number" }
         },
         "required": ["price"]
       },
@@ -676,6 +715,9 @@
           "telPhone": { "type": "string" },
           "consentGDPR": { "type": "boolean" },
           "consentPhoto": { "type": "boolean" },
+          "emailConfirmSent": { "type": "boolean" },
+          "emailPaymentInfoSent": { "type": "boolean" },
+          "emailPaymentConfirmSent": { "type": "boolean" },
           "people": {
             "type": "array",
             "items": { "$ref": "#/components/schemas/Person" }
@@ -717,10 +759,11 @@
           "discountPercent": { "type": "number" },
           "depositPaid": { "type": "boolean" },
           "paid": { "type": "boolean" },
-          "final_price": { "type": "number" },
-          "hasDeposit": { "type": "boolean" },
+          "variableSymbol": { "type": "string" },
+          "remainingValue": { "type": "number" },
           "hasDiscount": { "type": "boolean" },
-          "remainingValue": { "type": "number" }
+          "hasDeposit": { "type": "boolean" },
+          "finalPrice": { "type": "number" }
         },
         "required": ["price"]
       },
@@ -761,6 +804,9 @@
           "telPhone": { "type": "string" },
           "consentGDPR": { "type": "boolean" },
           "consentPhoto": { "type": "boolean" },
+          "emailConfirmSent": { "type": "boolean" },
+          "emailPaymentInfoSent": { "type": "boolean" },
+          "emailPaymentConfirmSent": { "type": "boolean" },
           "people": {
             "type": "array",
             "items": { "$ref": "#/components/schemas/Person_Public" }
@@ -1001,10 +1047,11 @@
           "discountPercent": { "type": "number" },
           "depositPaid": { "type": "boolean" },
           "paid": { "type": "boolean" },
-          "final_price": { "type": "number" },
-          "hasDeposit": { "type": "boolean" },
+          "variableSymbol": { "type": "string" },
+          "remainingValue": { "type": "number" },
           "hasDiscount": { "type": "boolean" },
-          "remainingValue": { "type": "number" }
+          "hasDeposit": { "type": "boolean" },
+          "finalPrice": { "type": "number" }
         },
         "required": ["price"]
       },
@@ -1046,6 +1093,9 @@
           "telPhone": { "type": "string" },
           "consentGDPR": { "type": "boolean" },
           "consentPhoto": { "type": "boolean" },
+          "emailConfirmSent": { "type": "boolean" },
+          "emailPaymentInfoSent": { "type": "boolean" },
+          "emailPaymentConfirmSent": { "type": "boolean" },
           "people": {
             "type": "array",
             "items": { "$ref": "#/components/schemas/Person_EventTerm" }
